<resources>
    <string name="app_name">RankMusic</string>
    <string name="text_toprank">巅峰榜</string>
    <string name="text_hot_rank">热歌</string>
    <string name="text_uk">欧美</string>
    <string name="text_local">内地</string>
    <string name="text_korea">韩国</string>
    <string name="text_rock">摇滚</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="localmusic">本地音乐</string>
    <string name="downloadmusic">我的下载</string>
    <string name="historymusic">最近播放</string>
    <string name="my_songlist">我的歌单</string>
    <string name="my_lovesonglist">我喜歡的歌曲</string>
    <string name="start">开始</string>
    <string name="stop">暂停</string>
</resources>
